--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Node.js dependencies
+node_modules
+
+# Build output
+dist
+dist-ssr
+build
+
+
 # Logs
 logs
 *.log
@@ -7,18 +16,26 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
+# Editor-specific files
 .vscode/*
 !.vscode/extensions.json
 .idea
-.DS_Store
+*.swp
 *.suo
+*.sln
 *.ntvs*
 *.njsproj
-*.sln
+
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Environment variables
+*.local
+
+# Temporary files
+*.tmp
+*.cache
 *.sw?
+
